[package]
name = "raycaster"
version = "0.1.0"
authors = ["johnm <trolledwoods@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
minifb = "0.19.1"
image = "0.23.10"
vek = "0.12.0"
